{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 21,
  "lineage": "1d65af1b-bace-e236-dc52-605c9d2d545d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590184143302:internet-gateway/igw-0231a8b7bd04f00f8",
            "id": "igw-0231a8b7bd04f00f8",
            "owner_id": "590184143302",
            "tags": {
              "Name": "hello-world-gateway"
            },
            "tags_all": {
              "Name": "hello-world-gateway"
            },
            "vpc_id": "vpc-07f99d9ce640f31bb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590184143302:route-table/rtb-033074442b54570ea",
            "id": "rtb-033074442b54570ea",
            "owner_id": "590184143302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0231a8b7bd04f00f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hello-world-route-table"
            },
            "tags_all": {
              "Name": "hello-world-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f99d9ce640f31bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c700363bd7e344dc",
            "route_table_id": "rtb-033074442b54570ea",
            "subnet_id": "subnet-0ae828fd16b882a23"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f71b20572aef2314",
            "route_table_id": "rtb-033074442b54570ea",
            "subnet_id": "subnet-043072fa89205b9fa"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590184143302:security-group/sg-0229464df6ab3a07e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0229464df6ab3a07e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20240608072757272900000001",
            "name_prefix": "terraform-",
            "owner_id": "590184143302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hello-world-sg"
            },
            "tags_all": {
              "Name": "hello-world-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f99d9ce640f31bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590184143302:subnet/subnet-0ae828fd16b882a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae828fd16b882a23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184143302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hello-subnet-1"
            },
            "tags_all": {
              "Name": "hello-subnet-1"
            },
            "vpc_id": "vpc-07f99d9ce640f31bb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590184143302:subnet/subnet-043072fa89205b9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043072fa89205b9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184143302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hello-subnet-2"
            },
            "tags_all": {
              "Name": "hello-subnet-2"
            },
            "vpc_id": "vpc-07f99d9ce640f31bb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590184143302:vpc/vpc-07f99d9ce640f31bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8b95879ccf305c6",
            "default_route_table_id": "rtb-0d2fe91c4a975a665",
            "default_security_group_id": "sg-06ddec99190b11bec",
            "dhcp_options_id": "dopt-0b09af605202aadce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07f99d9ce640f31bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2fe91c4a975a665",
            "owner_id": "590184143302",
            "tags": {
              "Name": "hello-world-vpc"
            },
            "tags_all": {
              "Name": "hello-world-vpc"
            }
          }
        }
      ]
    }
  ]
}